new changes according to the new screens